--- a/app/frontend/components/pages/Calendar/Calendar.module.css
+++ b/app/frontend/components/pages/Calendar/Calendar.module.css
@@ -1,9 +1,36 @@
+.calendar {
+  grid-column: main;
+}
+
+
 .event {
+  --card-background-color: var(--accent-a2);
+  --card-border-color: var(--accent-8);
+  --card-text-color: var(--accent-12);
+  --card-text-color-light: var(--accent-11);
+
   display: grid;
   grid-template: "icon title hide" auto "bats details ." auto / auto 1fr auto;
-  row-gap: var(--space-2);
+  gap: var(--space-2) var(--space-4);
   align-items: center;
-  column-gap: var(--space-4);
+  color: var(--card-text-color);
+
+  &::after {
+    border: 1px solid var(--card-border-color);
+    box-shadow: none;
+  }
+
+  &[data-waitlisted] {
+    opacity: 0.75;
+
+    &::after {
+      border-style: dashed;
+    }
+  }
+
+  [data-icon] {
+    color: var(--card-text-color-light);
+  }
 }
 
 .eventIcon {
@@ -13,6 +40,11 @@
 
 .eventName {
   grid-area: title;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .eventDetails {
