--- a/app/frontend/components/pages/Calendar/Calendar.module.css
+++ b/app/frontend/components/pages/Calendar/Calendar.module.css
@@ -10,7 +10,7 @@
   --card-text-color-light: var(--accent-11);
 
   display: grid;
-  grid-template: "icon title hide" auto "bats details ." auto / auto 1fr auto;
+  grid-template: "icon title hide" auto "bats details ." auto ". details ." auto / auto 1fr auto;
   gap: var(--space-2) var(--space-4);
   align-items: center;
   color: var(--card-text-color);
