add discount code to confirmation email

--- a/app/views/participant_mailer/workshop_confirmation.html.erb
+++ b/app/views/participant_mailer/workshop_confirmation.html.erb
@@ -47,6 +47,11 @@
   waitlists, please see our <a href="https://my.improvfest.nz/about/faq">FAQ</a>.
 </p>
 <p>
+  As a registered participant, you have access to discounted show tickets with the code
+  <b>EXPLORE24</b>. Please do not share this code with anyone or post it online (even in
+  our Facebook group).
+</p>
+<p>
   If you have any questions, please reply to this message, or email us at
   <a href="mailto:registrations@improvfest.nz">registrations@improvfest.nz</a>.
 <p>
