search for participants to add to session

--- a/app/frontend/components/pages/admin/WorkshopSession/WorkshopSession.module.css
+++ b/app/frontend/components/pages/admin/WorkshopSession/WorkshopSession.module.css
@@ -21,6 +21,12 @@
   }
 }
 
+.personPicker {
+  margin-top: var(--space-4);
+  box-shadow: none;
+  outline: none;
+}
+
 .list {
   display: flex;
   flex-direction: column;
