allow updating payment state

--- a/app/frontend/components/pages/admin/Payments/PaymentsList/PaymentsList.module.css
+++ b/app/frontend/components/pages/admin/Payments/PaymentsList/PaymentsList.module.css
@@ -26,6 +26,11 @@
   }
 
   tbody {
+    th,
+    td {
+      vertical-align: middle;
+    }
+
     th {
       font-weight: var(--font-weight-medium);
 
