--- a/app/frontend/components/molecules/DataTable/DataTable.module.css
+++ b/app/frontend/components/molecules/DataTable/DataTable.module.css
@@ -1,6 +1,5 @@
 .table {
-  grid-column: main;
-  margin-inline: calc(var(--table-cell-padding) * -1);
+  grid-column: full-bleed;
 
   :global(.rt-ScrollAreaRoot),
   :global(.rt-ScrollAreaViewport) {
@@ -20,6 +19,7 @@
       button {
         justify-content: space-between;
         width: calc(100% + var(--inset-padding-left) + var(--inset-padding-right));
+        margin-inline: calc(var(--space-3) * -1);
         border-radius: var(--radius-small);
       }
     }
@@ -42,5 +42,15 @@
       background: var(--gray-a4);
       cursor: pointer;
     }
+  }
+
+  th, td {
+    &:first-child {
+      padding-left: calc(var(--space-4) + var(--space-3));
+    }
+  }
+
+  @media (--sm) {
+    margin-inline: calc(var(--table-cell-padding) * -1);
   }
 }
