tidy up mobile activity views

--- a/app/frontend/components/pages/ActivityDetails/ActivityDetails.module.css
+++ b/app/frontend/components/pages/ActivityDetails/ActivityDetails.module.css
@@ -42,6 +42,6 @@
 
 .presenters {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(1fr, 24rem));
   gap: var(--space-4);
 }
