--- a/app/views/participant_mailer/workshop_confirmation.html.erb
+++ b/app/views/participant_mailer/workshop_confirmation.html.erb
@@ -5,7 +5,7 @@
   Here is your confirmed list of workshops for NZIF <%= @festival.year %>.
   You can always see an up-to-date list of your workshops on your
   individual
-  <%= link_to "calendar page", calendar_url %>.
+  <%= link_to "calendar page", personal_calendar_url %>.
 </p>
 <div class="left-pink-border">
   <%= render partial: 'session', collection: @registration.sessions.sort_by(&:starts_at) %>
