--- a/app/frontend/styles/new/admin.css
+++ b/app/frontend/styles/new/admin.css
@@ -3,7 +3,6 @@
     --max-width: 100vw;
     --layout-columns: [full-bleed-start] var(--gutter-width) [main-start] min(var(--max-width), calc(100vw - var(--gutter-width) * 2)) [main-end] var(--gutter-width) [full-bleed-end];
 
-    grid-template-rows: auto auto;
-    grid-auto-rows: 1fr;
+    grid-template-rows: auto auto 1fr;
   }
 }
