--- a/app/frontend/components/pages/ActivityDetails/ActivityDetails.module.css
+++ b/app/frontend/components/pages/ActivityDetails/ActivityDetails.module.css
@@ -25,8 +25,12 @@
   margin-bottom: var(--space-3);
 }
 
-.quotes {
-  margin-block: var(--space-3);
+.subsection {
+  margin-block: var(--space-5);
+
+  h3 {
+    margin-bottom: var(--space-2);
+  }
 }
 
 .picture {
