update discount code

--- a/app/views/participant_mailer/workshop_confirmation.html.erb
+++ b/app/views/participant_mailer/workshop_confirmation.html.erb
@@ -48,7 +48,7 @@
 </p>
 <p>
   As a registered participant, you have access to discounted show tickets with the code
-  <b>EXPLORE24</b>. Please do not share this code with anyone or post it online (even in
+  <b>HERE25</b>. Please do not share this code with anyone or post it online (even in
   our Facebook group).
 </p>
 <p>
