add cancellation policy

--- a/app/views/participant_mailer/workshop_confirmation.html.erb
+++ b/app/views/participant_mailer/workshop_confirmation.html.erb
@@ -47,6 +47,17 @@
   waitlists, please see our <a href="https://my.improvfest.nz/about/faq">FAQ</a>.
 </p>
 <p>
+  If you need to withdraw from a workshop more than 48 hours before it starts, we will give you a full
+  refund (settled after the Festival takes place). If you withdraw from a workshop less than 48 hours
+  before it starts, we cannot offer refunds. This is to ensure that whoever is next in the waitlist
+  gets enough notice that they're in.
+</p>
+<p>
+  If you need to withdraw with less than 48 hours' notice due to something that isn't your fault
+  (illness, emergency, etc), please email us (<a href="mailto:hello@improvfest.nz">hello@improvfest.nz</a>)
+  and we'll see what we can do.
+</p>
+<p>
   As a registered participant, you have access to discounted show tickets with the code
   <b>HERE25</b>. Please do not share this code with anyone or post it online (even in
   our Facebook group).
